fixed some wrapping issues on smaller view windows

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
 
 .logo-container {
   font-size: 50px;
+  margin-right: 40px;
   color: white;
 }
 
@@ -131,12 +132,6 @@ hr {
   font-size: 32px;
 }
 
-.wind-humidity-uvi {
-  margin-top: 4px;
-  font-weight: normal;
-  font-size: 16px;
-}
-
 .daily-chart {
   grid-column: 1;
   grid-row: 4;
@@ -155,6 +150,7 @@ hr {
 .stat-container {
   padding: 20px;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 .stat {
@@ -169,4 +165,5 @@ hr {
   font-size: 18px;
   font-weight: normal;
   height: 50px;
+  white-space: nowrap;
 }
